--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="albums__cards__card card">
+									<div class="albums__cards__card card last-card">
 										<img class="card_img" src="./img/albums/1.png" alt="#">
 										<div class="card__content">
 											<span class="card__content_title">
