--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
 								</span>
 							</div>
 							<div class="single__item">
-								<div class="single__item">
-									<img class="single__item_bg" src="./img/main/main2.png" alt="new track">
-									<span class="single__item__content">
-										Halloween vibes.
-										<br> Listen my new track!
-									</span>
-								</div>
+								<img class="single__item_bg" src="./img/main/main2.png" alt="solution">
+								<span class="single__item__content">
+									Halloween vibes.
+									<br> Listen my new track!
+								</span>
 							</div>
 							<div class="single__item">
 								<img class="single__item_bg" src="./img/main/main3.png" alt="stream">
